<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quntity</string>
    <string name="decrement">-</string>
    <string name="ammount">2</string>
    <string name="increment">+</string>
    <string name="order">order</string>
</resources>
